tests/paczka1/small_fuzzy/58649965.err
Error in line 5: Y8LXbj A829 66,8
Error in line 9: A829 A829 94,4
